# scrumpoker-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Shuttle.toml  fly.toml  render.yaml
public/css/: home.css  session.css
public/js/: home.js  session.js
src/: main.rs  models.rs
templates/: error.html.hbs  root.html.hbs  session.html.hbs
