[package]
name = "scrumpoker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera"] }
rocket_ws = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
rand = "0.8"
shuttle-runtime = "0.49.0"
shuttle-rocket = "0.49.0"
